diff for eGov-001 - eGov-055

--- a/rendered/eGovImplProfile.html
+++ b/rendered/eGovImplProfile.html
@@ -814,9 +814,33 @@ The ability to support &lt;saml2:AttributeValue&gt; elements whose values are no
 </div>
 <div class="sect2">
 <h3 id="_browser_single_sign_on">2.5. Browser Single Sign-On</h3>
-<div class="paragraph">
-<p>This section defines an implementation profile of the SAML V2.0 Web Browser SSO Profile [SAML2Prof].</p>
-</div>
+<table class="tableblock frame-all grid-all spread">
+<colgroup>
+<col style="width: 8%;">
+<col style="width: 5%;">
+<col style="width: 5%;">
+<col style="width: 5%;">
+<col style="width: 73%;">
+</colgroup>
+<thead>
+<tr>
+<th class="tableblock halign-left valign-top">RequID</th>
+<th class="tableblock halign-left valign-top">IDP</th>
+<th class="tableblock halign-left valign-top">SP</th>
+<th class="tableblock halign-left valign-top">Line</th>
+<th class="tableblock halign-left valign-top">Requirement</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">eGov-032</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MUST</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">MUST</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">233</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Support the implementation profile of the SAML V2.0 Web Browser SSO Profile [SAML2Prof].</p></td>
+</tr>
+</tbody>
+</table>
 <div class="sect3">
 <h4 id="_identity_provider_discovery">2.5.1. Identity Provider Discovery</h4>
 <table class="tableblock frame-all grid-all spread">
@@ -839,7 +863,7 @@ The ability to support &lt;saml2:AttributeValue&gt; elements whose values are no
 </thead>
 <tbody>
 <tr>
-<td class="tableblock halign-left valign-top"><p class="tableblock">eGov-035</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">eGov-033</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MUST</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MUST</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">227</p></td>
