--- a/rendered/FedIopImplProfile.html
+++ b/rendered/FedIopImplProfile.html
@@ -1366,7 +1366,7 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-017</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">IIP-MD05</p></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed. Interop does not limit signature verification to the metadata root element.</p>
+<p><span class="yellow-background">Removed. Interop does not limit signature verification to the metadata root element.</span></p>
 </div></div></td>
 </tr>
 <tr>
@@ -1626,7 +1626,7 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-045</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed. Interop has not explicit rule for the verification of requested AssertionConsumerServiceURL locations via comparison to metadata; however, it can be derived from [SAMLProf] 4.1.4.1 ("identity provider MUST ensure that any &lt;AssertionConsumerServiceURL&gt; or &lt;AssertionConsumerServiceIndex&gt; elements in the request are verified") and IIP-MD03.</p>
+<p>[yellow-background]# Removed explicit rule for the verification of requested AssertionConsumerServiceURL locations via comparison to metadata; however, it can be derived from [SAMLProf] 4.1.4.1 ("identity provider MUST ensure that any &lt;AssertionConsumerServiceURL&gt; or &lt;AssertionConsumerServiceIndex&gt; elements in the request are verified") and IIP-MD03.#</p>
 </div></div></td>
 </tr>
 <tr>
@@ -1689,14 +1689,14 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-065</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed requirement to support the SessionNotOnOrAfter attribute.</p>
+<p><span class="yellow-background">Removed requirement to support the SessionNotOnOrAfter attribute.</span></p>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-066</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed requirement to support acceptance/rejection of assertions based on the content of the &lt;saml2:AuthnContext&gt; element.</p>
+<p><span class="yellow-background">Removed requirement to support acceptance/rejection of assertions based on the content of the &lt;saml2:AuthnContext&gt; element.</span></p>
 </div></div></td>
 </tr>
 <tr>
@@ -1717,7 +1717,7 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-070 - 073</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed requirement to support  artifact binding.</p>
+<p>Removed requirement to support artifact binding.</p>
 </div></div></td>
 </tr>
 <tr>
@@ -1801,7 +1801,7 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-094</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed requirement to support  signatures and TLS server authentication to authenticate &lt;saml2p:LogoutRequest&gt; messages.</p>
+<p><span class="yellow-background">Removed requirement to support signatures and TLS server authentication to authenticate &lt;saml2p:LogoutRequest&gt; messages.</span></p>
 </div></div></td>
 </tr>
 <tr>
@@ -1829,7 +1829,7 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-098</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed requirement to support UI for status information (e.g. partial logout indication).</p>
+<p><span class="yellow-background">Removed requirement to support UI for status information (e.g. partial logout indication).</span></p>
 </div></div></td>
 </tr>
 <tr>
@@ -1864,7 +1864,7 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-103</p></td>
 <td class="tableblock halign-left valign-top"></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Removed requirement to support signatures and TLS server authentication to authenticate &lt;saml2p:LogoutRequest&gt; messages.</p>
+<p><span class="yellow-background">Removed requirement to support signatures and TLS server authentication to authenticate &lt;saml2p:LogoutRequest&gt; messages.</span></p>
 </div></div></td>
 </tr>
 <tr>
@@ -1878,14 +1878,14 @@ have not been listed.</p>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-110</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">IIP-ALG02</p></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Extended: Added support for rsa-sha1.</p>
+<p><span class="yellow-background">Extended: Added support for rsa-sha1.</span></p>
 </div></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">eGov-111</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">IIP-ALG01</p></td>
 <td class="tableblock halign-left valign-top"><div><div class="paragraph">
-<p>Extended: Added support for sha1.</p>
+<p><span class="yellow-background">Extended: Added support for sha1.</span></p>
 </div></div></td>
 </tr>
 <tr>
