--- a/rendered/FedIopImplProfile.html
+++ b/rendered/FedIopImplProfile.html
@@ -1209,8 +1209,8 @@ The default mask generation function (MGF1 with SHA1) MUST be supported for the 
 <h2 id="_differences_to_egovernment_implementation_profile_of_saml_v2_0">7. Differences to eGovernment Implementation Profile of SAML V2.0</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>The Implementation Profile for Federation Interoperability supercedes the older
-eGovernment Implementation Profile, which was not limited in its application to government agencies.
+<p>The Implementation Profile for Federation Interoperability (this document) supercedes the older
+<a href="eGovImplProfile.html">eGovernment Implementation Profile</a>.
 This section provides an overview of the differences between the two profiles.
 The profiles will be abbreviated "Interop" and "eGov" respectively.</p>
 </div>
