--- a/rendered/FedIopImplProfile.html
+++ b/rendered/FedIopImplProfile.html
@@ -528,7 +528,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h4 id="_metadata_capabilities">2.1.1. Metadata Capabilities</h4>
 <div class="dlist">
 <dl>
-<dt class="hdlist1">[IIP-MD01]</dt>
+<dt class="hdlist1"><a href="#IIP-MD01">[IIP-MD01]</a></dt>
 <dd>
 <p>Implementations MUST support SAML Metadata as defined in the following OASIS specifications:</p>
 <div class="ulist">
@@ -1171,9 +1171,6 @@ The default mask generation function (MGF1 with SHA1) MUST be supported for the 
 <p><a id="SAML2ASLO"></a>[SAML2ASLO] OASIS Committee Specification, SAML V2.0 Asynchronous Single Logout Profile Extension Version 1.0, November 2012. <a href="http://docs.oasis-open.org/security/saml/Post2.0/saml-async-slo/v1.0/cs01/saml-async-slo-v1.0-cs01.pdf" class="bare">http://docs.oasis-open.org/security/saml/Post2.0/saml-async-slo/v1.0/cs01/saml-async-slo-v1.0-cs01.pdf</a></p>
 </li>
 <li>
-<p><a id="XMLDsig"></a>[XMLDsig] W3C Recommendation, XML Signature Syntax and Processing (Second Edition), June 2008. <a href="http://www.w3.org/TR/xmldsig-core/" class="bare">http://www.w3.org/TR/xmldsig-core/</a></p>
-</li>
-<li>
 <p><a id="MDQ"></a>[MDQ] Internet-Draft, Metadata Query Protocol, December 2013. <a href="https://tools.ietf.org/html/draft-young-md-query-01" class="bare">https://tools.ietf.org/html/draft-young-md-query-01</a></p>
 </li>
 <li>
@@ -1187,6 +1184,9 @@ The default mask generation function (MGF1 with SHA1) MUST be supported for the 
 </li>
 <li>
 <p><a id="RFC4051"></a>[RFC4051] IETF RFC 4051, Additional XML Security Uniform Resource Identifiers, April 2005. <a href="https://www.ietf.org/rfc/rfc4051.txt" class="bare">https://www.ietf.org/rfc/rfc4051.txt</a></p>
+</li>
+<li>
+<p><a id="XMLDsig"></a>[XMLDsig] W3C Recommendation, XML Signature Syntax and Processing (Second Edition), June 2008. <a href="http://www.w3.org/TR/xmldsig-core/" class="bare">http://www.w3.org/TR/xmldsig-core/</a></p>
 </li>
 <li>
 <p><a id="XMLEnc"></a>[XMLEnc] D. Eastlake et al. XML Encryption Syntax and Processing. World Wide Web Consortium Recommendation, April 2013. <a href="https://www.w3.org/TR/xmlenc-core1/" class="bare">https://www.w3.org/TR/xmlenc-core1/</a></p>
