--- a/rendered/FedIopImplProfile.html
+++ b/rendered/FedIopImplProfile.html
@@ -455,10 +455,10 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </li>
 <li><a href="#_references">5. References</a></li>
 <li><a href="#_contributors">6. Contributors</a></li>
-<li><a href="#_differences_to_egovernment_implementation_profile_of_saml_v2_0">7. Differences to eGovernment Implementation Profile of SAML V2.0</a>
+<li><a href="#_differences_to_egovernment_implementation_profile_of_saml_v2_0">7. Differences to eGovernment Implementation Profile of SAML V2.0</a></li>
+<li><a href="#_general_changes_in_the_interop_profile">8. General Changes in the Interop Profile</a>
 <ul class="sectlevel2">
-<li><a href="#_structure_and_general_approach">7.1. Structure and General Approach</a></li>
-<li><a href="#_requirement_mapping">7.2. Requirement Mapping</a></li>
+<li><a href="#_approach_to_mapping_the_profiles">8.1. Approach to Mapping the Profiles</a></li>
 </ul>
 </li>
 </ul>
@@ -1256,33 +1256,44 @@ This section summarizes the differences between the two profiles.</p>
 <div class="paragraph">
 <p>The profiles will be abbreviated "Interop" and "eGov" respectively.</p>
 </div>
-<div class="sect2">
-<h3 id="_structure_and_general_approach">7.1. Structure and General Approach</h3>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_general_changes_in_the_interop_profile">8. General Changes in the Interop Profile</h2>
+<div class="sectionbody">
 <div class="ulist">
 <ul>
 <li>
-<p>The Interop Profile introduces a new layer in its outline for requirements that are
-related to IDPs, SPs or are common.</p>
+<p>The name reflects the fact that SAML WebSSO Federation as described in the eGov profile is in fact applicable to any sector, not only to public sector.</p>
 </li>
 <li>
-<p>The conformance classes have been dropped in favor of a single set of requirements.</p>
+<p>The profile specifies the minimal requirements for implementers of SAML software that that promote interoperability by default.</p>
+</li>
+<li>
+<p>Requirements have been reworded in the Interop profile for better precision and to reflect lessons learned.</p>
 </li>
 <li>
 <p>Requirements have been selected to be testable and related to the implementation perspective.</p>
 </li>
 </ul>
 </div>
-</div>
 <div class="sect2">
-<h3 id="_requirement_mapping">7.2. Requirement Mapping</h3>
-<div class="paragraph">
-<p>The June 2010 version 2.0 of the eGov profile was reformatted in a more formal way
-with requirement identifiers for better reference, and is published as version 2.0bis.
-The following mapping table is using these identifiers.
-Requirements have been reworded in the Interop profile for better precision and to
-reflect lessons learned. This section is not going into the fine details, but tries
-to give a guide to the changes in general. Only MUST and SHOULD requirements
-have not been included.</p>
+<h3 id="_approach_to_mapping_the_profiles">8.1. Approach to Mapping the Profiles</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>The Interop Profile introduces a new layer in its outline for requirements that are related to IDPs, SPs or are common to both. The mapping table follows the eGov strucuture.</p>
+</li>
+<li>
+<p>The conformance classes have been dropped in favor of a single set of requirements.</p>
+</li>
+<li>
+<p>The June 2010 version 2.0 of the eGov profile was reformatted in a more formal way with requirement identifiers for better reference, and is published as version 2.0bis. The following mapping table is using these identifiers.</p>
+</li>
+<li>
+<p>This section is not going into the fine details, but tries to give a guide to the changes in general. Only MUST and SHOULD requirements have not been included.</p>
+</li>
+</ul>
 </div>
 <table class="tableblock frame-all grid-all spread">
 <caption class="title">Table 1. eGov to Interop Profile Mapping</caption>
