--- a/rendered/FedIopImplProfile.html
+++ b/rendered/FedIopImplProfile.html
@@ -1203,6 +1203,9 @@ The default mask generation function (MGF1 with SHA1) MUST be supported for the 
 <li>
 <p><a id="RFC7457"></a>[RFC7457] IETF RFC 7457, Summarizing Known Attacks on Transport Layer Security (TLS) and Datagram TLS (DTLS), February 2015. <a href="https://www.ietf.org/rfc/rfc7457.txt" class="bare">https://www.ietf.org/rfc/rfc7457.txt</a></p>
 </li>
+<li>
+<p><a id="SAML-EC"></a>[SAML-EC] Internet-Draft (kitten WG), SAML Enhanced Client SASL and GSS-API Mechanisms, October 10, 2015. <a href="https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/" class="bare">https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/</a></p>
+</li>
 </ul>
 </div>
 </div>
