updated IIP-MD03, ref to SAML-EC as if fed-interop list

--- a/rendered/FedIopImplProfile.html
+++ b/rendered/FedIopImplProfile.html
@@ -567,7 +567,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </dd>
 <dt class="hdlist1"><a id="IIP-MD03"></a> [IIP-MD03]</dt>
 <dd>
-<p>Implementations MUST support the interpretation and application of metadata as defined by the SAML V2.0 Metadata Interoperability Profile <a href="#SAML2MDIOP">[SAML2MDIOP]</a>. Support for other metadata profiles is OPTIONAL. It follows that implementations MUST be capable of interoperating (leading to success or failure as dictated by default configuration) with any number of SAML peers for which metadata is supplied, without additional inputs or separate configuration. In accordance with the SAML V2.0 Metadata Interoperability Profile <a href="#SAML2MDIOP">[SAML2MDIOP]</a>, metadata MUST be:</p>
+<p>Implementations MUST support the interpretation and application of metadata as defined by the SAML V2.0 Metadata Interoperability Profile <a href="#SAML2MDIOP">[SAML2MDIOP]</a>. It follows that implementations MUST be capable of interoperating (leading to success or failure as dictated by default configuration) with any number of SAML peers for which metadata is supplied, without additional inputs or separate configuration. In accordance with the SAML V2.0 Metadata Interoperability Profile <a href="#SAML2MDIOP">[SAML2MDIOP]</a>, metadata MUST be:</p>
 </dd>
 </dl>
 </div>
@@ -1204,7 +1204,7 @@ The default mask generation function (MGF1 with SHA1) MUST be supported for the 
 <p><a id="RFC7457"></a>[RFC7457] IETF RFC 7457, Summarizing Known Attacks on Transport Layer Security (TLS) and Datagram TLS (DTLS), February 2015. <a href="https://www.ietf.org/rfc/rfc7457.txt" class="bare">https://www.ietf.org/rfc/rfc7457.txt</a></p>
 </li>
 <li>
-<p><a id="SAML-EC"></a>[SAML-EC] Internet-Draft (kitten WG), SAML Enhanced Client SASL and GSS-API Mechanisms, October 10, 2015. <a href="https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/" class="bare">https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/</a></p>
+<p><a id="SAML-EC"></a>[SAML-EC] IETF Internet-Draft, SAML Enhanced Client SASL and GSS-API Mechanisms, October 10, 2015. <a href="https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/" class="bare">https://datatracker.ietf.org/doc/draft-ietf-kitten-sasl-saml-ec/</a></p>
 </li>
 </ul>
 </div>
