--- a/fedinterop.html
+++ b/fedinterop.html
@@ -416,6 +416,46 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 .hide-for-print{display:none!important}
 .show-for-print{display:inherit!important}}
 </style>
+<meta name="keywords" content="SAML">
+<style>
+body {
+  background-image: url("./kantara400.png");
+  background-attachment: scroll;;
+  background-position: center 1.5em;
+  background-size: 280px;
+  background-repeat: no-repeat;
+  margin-top: 150px;
+}
+#header > h1:first-child {
+  color: blue;
+  text-align: center;
+  font-size: 150%;
+  margin-bottom: 2em;
+  font-weight: bold;
+}
+div.sect1 > h2, div#toctitle {
+  color: black;
+  font-size: 130%;
+  line-height: 21pt;
+  font-weight: bold;
+}
+div.sect2 > h3 {
+  color: black;
+  font-size: 120%;
+  line-height: 15pt;
+  font-weight: bold;
+}
+div.sect3 > h4 {
+  color: black;
+  font-size: 110%;
+  font-weight: bold;
+}
+div.title  {
+  color: black;
+  font-size: 110%;
+  font-weight: bold;
+}
+</style>
 </head>
 <body class="article">
 <div id="header">
@@ -463,11 +503,23 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="sectionbody">
 <div class="paragraph">
 <div class="title">Abstract</div>
-<p>This document encompasses a set of software conformance requirements intended to facilitate interoperability within the context of full mesh identity federations, such as those found in the research and education sector. It attempts to address a number of common barriers to interoperability and details features that are necessary in order to use SAML metadata as a foundation for scalable trust fabrics.</p>
+<p>This document encompasses a set of software conformance requirements intended to
+facilitate interoperability within the context of full mesh identity federations,
+such as those found in the research and education sector. It attempts to address
+a number of common barriers to interoperability and details features that are
+necessary in order to use SAML metadata as a foundation for scalable trust fabrics.
+It supercedes the <a href="eGovImplProfile.html">eGovernment Implementation Profile V2.0bis</a> from June 2011.</p>
 </div>
 <div class="paragraph">
 <div class="title">Status</div>
-<p>Approved</p>
+<p>Draft.
+This document have been worked up and approved by the InCommon Fed-Interop WG and then
+transferred to Kantara FI-WG for further alignment with stakeholders outside the
+research &amp; education community.</p>
+</div>
+<div class="paragraph">
+<div class="title">Copyright Notice</div>
+<p>SAML V2.0 Implementation Profile for Federation Interoperability © 2016 Internet2, used under license.  All rights reserved.</p>
 </div>
 </div>
 </div>
@@ -1252,7 +1304,7 @@ The default mask generation function (MGF1 with SHA1) MUST be supported for the 
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-05-25 20:10:40 CEST
+Last updated 2016-05-29 12:00:03 CEST
 </div>
 </div>
 </body>
